--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -1,6 +1,22 @@
-﻿.message {
-  color: #000;
-  font-size: 20;
-  horizontal-align: center;
-  padding:20;
+﻿.login-title {
+    margin-top: 30;
+    color: #666666;
+    font-size: 14;
+    horizontal-align: center;
+}
+
+.btn-login-ms {
+    background-image: url('res://microsoft_logo_squares');
+    background-size: 20 20;
+    background-position: 10 10;
+    background-repeat: no-repeat;
+    padding-left: 40;
+    padding-right: 10;
+    padding-top: 10;
+    padding-bottom: 10;
+    border-width: 1;
+    border-color: red;
+    border-radius: 2;
+    horizontal-align: center;
+    margin-top:40;
 }
